--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "dev": "tsc && vite",
-    "build": "tsc && vite build"
+    "build": "vite build",
+    "typecheck": "tsc"
   },
   "dependencies": {
     "typescript": "^5.3.3",
